fix: directory changes
